Creating controller and fixing DTO generation
